ocp/Service02.yml
apiVersion: v1
kind: Service
metadata:
  name: service-springboot
  labels:
    name: deploy-test
spec:
  selector:
    app: deploy-test
  ports:
    - protocol: TCP
      port: 12345
      targetPort: 9527
