ocp/ingress-springboot.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-springboot
  #namespace: jenkins01
spec:
  rules:
    - host: ingress-springboot
      http:
        paths:
          - path: /
            backend:
              serviceName: service-springboot
              servicePort: 12345
